
dnl Process this file with autoconf to produce a configure script.
AC_INIT([mlnx_lib], [0.0.0001])
AC_CONFIG_SRCDIR([])

dnl use local config dir for extras
AC_CONFIG_AUX_DIR(config)

dnl we use auto cheader
AM_CONFIG_HEADER(config.h)

dnl Defines the Language - we need gcc linker ...
AC_LANG_C

dnl Auto make
AM_INIT_AUTOMAKE

dnl Provides control over re-making of all auto files
AM_MAINTAINER_MODE

# this must come before AC_PROG_CC
if test -z "$CFLAGS"; then
   # if CFLAGS is not set, we preset it to -O0
   # with this setting, we prevent autoconf from defaulting to "-g -O2"
   export CFLAGS=-O0
fi

dnl Required for cases make defines a MAKE=make ??? Why
AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC

dnl We will use libtool for making ...
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([sys/types.h stdio.h stdlib.h string.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.
#AC_CHECK_FUNCS([strchr strstr strtol strtoull regcomp regexec])

dnl Define an input config option to control debug compile
AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
	yes) debug=true ;;
	no)  debug=false ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl Define an input config option to control complib path
AC_ARG_WITH(sxcomplib,
[  --with-sxcomplib=<dir> define compatibility library directory],
AC_MSG_NOTICE(Using compatibility library from:$with_sxcomplib),
with_sxcomplib="none")
SX_COMPLIB_PATH=
if test "x$with_sxcomplib" != xnone; then
  SX_COMPLIB_PATH=$with_sxcomplib
fi
AC_SUBST(SX_COMPLIB_PATH)

dnl Define an input config option to control OES path
AC_ARG_WITH(oes,
[  --with-oes=<dir> define oes library directory],
AC_MSG_NOTICE(Using oes library from:$with_oes),
with_oes="none")
OES_PATH=
if test "x$with_oes" != xnone; then
  OES_PATH=$with_oes
fi
AC_SUBST(OES_PATH)

CFLAGS_MLNX_LIBS_COMMON="-Wall -Wextra -Wswitch -Werror -fPIC -fno-strict-aliasing"
AC_SUBST(CFLAGS_MLNX_LIBS_COMMON)

dnl Create the following Makefiles
AC_OUTPUT([Makefile                                 \
           sx_complib/Makefile libeventdisp/Makefile libcommu/Makefile libctrllearn/Makefile])
